--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
         "postcss": "^8.1.14",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
-        "react-router-dom": "^5.2.0"
+        "node-sass": "^4.14.1"
     }
 }
